--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>${commons-collections4.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>topiacoin</groupId>
+			<artifactId>blockchainUtil</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
