--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<httpclient.version>4.3.6</httpclient.version>
 		<gson.version>2.8.1</gson.version>
 		<commons-codec.version>1.10</commons-codec.version>
+		<commons-io.version>2.6</commons-io.version>
 		<commons-collections4.version>4.1</commons-collections4.version>
 	</properties>
 
@@ -49,6 +50,11 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>${commons-codec.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
