--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>blockchainUtil</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.topiacoin</groupId>
+            <artifactId>eosRPCAdapter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -123,6 +128,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.6</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
