--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
             <version>2.9.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.23.1</version>
+        </dependency>
+
         <!-- Test Dependencies -->
 
         <dependency>
